2006-07-25  Roland Clobus <rclobus@bigfoot.com>
	* server/lobby.game: New, non-empty map
	* server/main.c: create a listening admin socket only when requested
	from the command line
	
2006-07-05  Roland Clobus <rclobus@bigfoot.com>
	* editor/gtk/editor.c, common/gtk/theme.c, common/gtk/config-gnome.c,
	common/game.c, common/state.c, common/network.c, server/gtk/main.c,
	client/gtk/offline.c, client/gtk/gui.c, client/common/client.c,
	client/common/player.c: Removed translation tags in g_error and
	g_warning
	* docs/README.release: Update steps for a release
	* server/lobby.game: Added an empty map, for the lobby
	* editor/gtk/editor.c, common/gtk/config-gnome.c, configure.ac,
	server/gtk/main.c, client/gtk/offline.c, client/gtk/gui.c,
	client/ai/ai.c: Removed Glib 2.6 #ifdef code
	
2006-06-23  Roland Clobus <rclobus@bigfoot.com>
	* getVersions.sh: View the versions in the various distributions
	
2006-06-06  Roland Clobus <rclobus@bigfoot.com>
	* Released version 0.9.64
	* Subversion commit date: 2006-06-19
	
2006-06-06  Roland Clobus <rclobus@bigfoot.com>
	* server/main.c: Allow games with more than 3 victory points, when
	started from the commandline
	* server/trade.c: Restored to 0.9.52 version
	* Subversion commit date: 2006-06-19
	
2006-05-30  Roland Clobus <rclobus@bigfoot.com>
	* Released version 0.9.63
	
2006-05-30  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, client/gtk/quote.c, client/gtk/offline.c,
	client/common/client.h, client/common/callback.c: Minimum requirement
	is Glib 2.6 and Gtk+ 2.6. Remove use of Gtk+ 2.8 icon. Fixed compiler
	warnings

2006-05-28  Roland Clobus <rclobus@bigfoot.com>
	* Released version 0.9.62
	
2006-05-28  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/interface.c, client/gtk/frontend.h, client/gtk/player.c,
	client/gtk/quote.c, client/gtk/trade.c, client/gtk/quote-view.c,
	client/gtk/quote-view.h: Rewrite of quote.c
	* server/trade.c: Throw away the quotes before ending the trade
	