@@ -24,9 +24,9 @@
 
 #include "guimap.h"
 
-gint color_messages_enabled;
 void set_color_summary(gboolean flag);
-gint legend_page_enabled;
+gboolean get_announce_player(void);
+void set_announce_player(gboolean announce);
 
 GtkWidget *gui_get_dialog_button(GtkDialog * dlg, gint button);
 
