@@ -2,6 +2,8 @@
 	* server/lobby.game: New, non-empty map
 	* server/main.c: create a listening admin socket only when requested
 	from the command line
+	* client/gtk/player.c, client/gtk/gui.c, client/gtk/gui.h: Announce
+	new players and viewers when they enter
 	
 2006-07-05  Roland Clobus <rclobus@bigfoot.com>
 	* editor/gtk/editor.c, common/gtk/theme.c, common/gtk/config-gnome.c,
